- https://github.com/eclipse-syson/syson/issues/1409[#1409] [import] Fix unresolved elements while importing element with `FeatureChain`.
- https://github.com/eclipse-syson/syson/issues/1431[#1431] [import] Fix textual import issues when importing `MetadataUsage`.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Align metamodel to SysMLv2 2025-04 specification released on April 2025(see https://www.omg.org/spec/SysML/ for more details) and KerML 2025-04 specification released on April 2024(see https://www.omg.org/spec/KerML/ for more details).
- https://github.com/eclipse-syson/syson/issues/1448[#1448] [syson] Exclude referenced libraries from validation

=== New features

- https://github.com/eclipse-syson/syson/issues/1396[#1396] [general-view] Add a graphical edge representation for `IncludeUseCaseUsage` in the  _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1405[#1405] [export] Implement the textual export of `FlowUsage`.

== v2025.6.0

=== Shapes

- Add support for `ViewUsages` and `ViewDefinitions`

=== Breaking changes

- Some APIs have changed, impacting downstream applications:

* `org.eclipse.syson.tree.explorer.view.services.api.ISysONDefaultExplorerService`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerFragment`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
* `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerService`
** `hasChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter
** `getChildren`: new `List<RepresentationMetadata> existingRepresentations` parameter