@@ -156,6 +156,9 @@ package p1 {
 }
 ```
 
+- In the _Explorer_ view, fix an issue where the context menu of a tree item was loaded twice.
+
+
 == Improvements
 
 - Align metamodel to {sysmlv2} 2025-04 specification released on April 2025 (see https://www.omg.org/spec/SysML/ for more details) and {kerml} 2025-04 specification released on April 2025 (see https://www.omg.org/spec/KerML/ for more details).
